# custom-mcp-hosting-gcp

./: Dockerfile  MCP.md  MCP_client.py  README.md  Server-MCP.md  bridge_client_test.py  instructions.txt  mcp_client.py  pyproject.toml  requirements.txt  server.py  take_inputs.py  validations.py
